# CLOUD-BANK

./: .gitignore  README.md
.github/workflows/: ci-ai-services.yml  ci-backend.yml  ci-frontend.yml
ai-services/: .env.example  Dockerfile  README.md  pyproject.toml
ai-services/src/agents/adapters/: __init__.py  actuarial_adapter.py  approval_adapter.py  base_adapter.py  credit_adapter.py  fraud_adapter.py
ai-services/src/agents/deep/: __init__.py  actuarial_deep_agent.py  approval_deep_agent.py  base_deep_agent.py  credit_deep_agent.py  fraud_deep_agent.py  schemas.py
ai-services/src/api/: main.py  schemas.py
ai-services/src/contracts/: __init__.py  agent_result.py
ai-services/src/core/: config.py  exceptions.py  state.py
ai-services/src/infrastructure/llm/: __init__.py  anthropic_provider.py  gemini_provider.py  openai_provider.py  provider_factory.py  provider_port.py
ai-services/src/observability/: logger.py  metrics.py  tracer.py
ai-services/src/orchestrator/: __init__.py
ai-services/src/orchestrator/edges/: __init__.py  routing_logic.py
ai-services/src/orchestrator/graph/: __init__.py  credit_evaluation_graph.py
ai-services/src/orchestrator/nodes/: __init__.py  agent_execution_node.py  finalization_node.py  input_validation_node.py
ai-services/src/orchestrator/state/: __init__.py  evaluation_state.py
ai-services/src/security/: data_protection.py  input_validator.py  prompt_guard.py
ai-services/src/tools/: actuarial_tools.py  credit_tools.py  fraud_tools.py
ai-services/tests/: conftest.py  test_pipeline_endpoint.py
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/config/: logging_config.yaml  settings.py
backend/src/api/: app.py  dependencies.py  main.py
backend/src/api/middleware/: __init__.py  auth_middleware.py  rate_limit_middleware.py  security_headers_middleware.py
backend/src/api/v1/: __init__.py  admin_router.py  auth_router.py  credit_router.py  identity_router.py
backend/src/application/: __init__.py
backend/src/application/dto/: __init__.py  credit_application_dto.py  credit_decision_dto.py  identity_dto.py
backend/src/application/ports/: __init__.py  agent_port.py  notification_port.py  repository_port.py  secret_port.py
backend/src/application/use_cases/: __init__.py  evaluate_credit_application.py  retrieve_credit_decision.py
backend/src/domain/: __init__.py
backend/src/domain/entities/: __init__.py  credit_application.py  credit_decision.py
backend/src/domain/events/: __init__.py  credit_events.py
backend/src/domain/repositories/: __init__.py  credit_repository.py
backend/src/domain/services/: __init__.py  credit_policy_service.py
backend/src/domain/value_objects/: __init__.py  applicant.py  money.py  risk_score.py
backend/src/infrastructure/: __init__.py
backend/src/infrastructure/ai_services/: __init__.py  ai_services_client.py
backend/src/infrastructure/identity/: reniec_client.py
backend/src/infrastructure/messaging/: __init__.py  event_publisher.py
backend/src/infrastructure/persistence/: __init__.py  postgres_repositories.py  redis_state_store.py
backend/src/infrastructure/secrets/: __init__.py  vault_client.py
backend/src/monitoring/: __init__.py
backend/src/monitoring/auditing/: __init__.py  audit_service.py
backend/src/monitoring/health/: __init__.py  health_checker.py
backend/src/monitoring/logging/: __init__.py  structured_logger.py
backend/src/monitoring/metrics/: __init__.py  prometheus_registry.py
backend/src/security/authentication/: __init__.py  api_key_authenticator.py  jwt_authenticator.py
backend/src/security/authorization/: __init__.py  rbac.py
backend/src/security/encryption/: __init__.py  field_encryptor.py
backend/src/security/guards/: __init__.py  prompt_injection_guard.py
backend/src/security/rate_limiting/: __init__.py  rate_limiter.py
backend/tests/: conftest.py  factories.py
backend/tests/e2e/: test_credit_evaluation_flow.py
backend/tests/integration/: test_credit_pipeline.py
backend/tests/unit/application/: test_evaluate_credit_use_case.py
backend/tests/unit/domain/: test_credit_application_entity.py  test_credit_policy_service.py  test_money.py  test_risk_score.py
backend/tests/unit/security/: test_rate_limiter.py
docs/: FREE_TIER_ARCHITECTURE.md  MASTER_ARCHITECTURE.md  SERVICE_CONTRACTS.md
docs/diagrams/: ARCHITECTURE.md  DEPLOYMENT_INFRASTRUCTURE.md
frontend/: .env.local.example  Dockerfile  README.md  middleware.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/auth/login/: route.ts
frontend/app/api/proxy/evaluate/: route.ts
frontend/app/api/proxy/identity/[numero]/: route.ts
frontend/app/api/proxy/status/[id]/: route.ts
frontend/app/apply/: page.tsx
frontend/app/login/: page.tsx
frontend/app/status/[id]/: page.tsx
frontend/lib/: backend-client.ts
infrastructure/: docker-compose.yml  prometheus.yml
infrastructure/k8s/: ai-services-deployment.yaml  backend-deployment.yaml  frontend-deployment.yaml  namespace.yaml
infrastructure/postgres/: init.sql
