[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloudbank-ai-services"
version = "1.0.0"
description = "CLOUD BANK — ai-services: LangGraph + 4 Deep Agents + abstracción multi-proveedor LLM"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "CLOUD BANK", email = "platform@cloudbank.internal" }]

dependencies = [
    # ── Orquestación de agentes ────────────────────────────────────────────────
    "langgraph>=0.2.55",

    # ── Proveedores LLM (abstraídos detrás de LLMProviderPort) ────────────────
    "anthropic>=0.40.0",
    "openai>=1.55.0",
    "google-generativeai>=0.8.0",

    # ── API interna ────────────────────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",

    # ── Seguridad (sanitización de prompts) ────────────────────────────────────
    "bleach>=6.2.0",

    # ── Validation & Serialization ─────────────────────────────────────────────
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # ── Observability ──────────────────────────────────────────────────────────
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "prometheus-client>=0.21.0",
    "structlog>=24.4.0",

    # ── Resilience ─────────────────────────────────────────────────────────────
    "tenacity>=9.0.0",

    # ── Modelos actuariales ────────────────────────────────────────────────────
    "numpy>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.0",
]
lint = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "bandit>=1.8.0",
]

[project.scripts]
cloudbank-ai-services = "src.api.main:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["--strict-markers", "--tb=short", "-ra"]
markers = [
    "unit: unit tests (no I/O, LLM mockeado)",
    "integration: integration tests (LLM real, requiere API key)",
]

[tool.coverage.run]
source = ["src"]
omit = ["**/__init__.py"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = ["tests/"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
