[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloudbank-backend"
version = "2.0.0"
description = "CLOUD BANK — Backend: Clean Architecture, API REST, persistencia, seguridad"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "CLOUD BANK", email = "platform@cloudbank.internal" }]

dependencies = [
    # ── API & Web Framework ────────────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.12",

    # ── Validation & Serialization ─────────────────────────────────────────────
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",

    # ── Security & Cryptography ────────────────────────────────────────────────
    "cryptography>=44.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.1",  # passlib 1.7.4 no soporta bcrypt>=4.1 (rompe verify con ValueError)
    "python-dotenv>=1.0.1",

    # ── Persistence ─────────────────────────────────────────────────────────────
    "asyncpg>=0.30.0",
    "redis[hiredis]>=5.2.0",

    # ── Observability ──────────────────────────────────────────────────────────
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-redis>=0.50b0",
    "prometheus-client>=0.21.0",
    "structlog>=24.4.0",
    "psutil>=6.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.0",
    "fakeredis>=2.26.0",
    "faker>=33.0.0",
    "factory-boy>=3.3.0",
    "freezegun>=1.5.0",
]
lint = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "bandit>=1.8.0",
]

[project.scripts]
cloudbank-backend = "src.api.main:run"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--tb=short", "-ra"]
markers = [
    "unit: unit tests (no I/O)",
    "integration: integration tests (require Redis/Postgres)",
    "e2e: end-to-end tests (require full stack, ai-services mockeado)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/api/main.py", "**/__init__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = ["tests/"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
